# KDE-lower-brightness

./: .gitignore  README.md
lowerbrightness/: CMakeLists.txt  lowerbrightness.cpp  metadata.json
